--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.8.0",
     "discord-buttons": "^4.0.0",
     "discord-reply": "^0.1.2",
     "discord.js": "^12.5.3",
     "enmap": "^5.8.5",
+    "gifencoder": "^2.0.1",
     "grapheme-splitter": "^1.0.4",
     "i18n": "^0.13.3",
     "pathfinding": "^0.4.18"
