--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^12.5.3",
     "enmap": "^5.8.5",
     "gif-encoder-2": "^1.0.5",
+    "gif.js": "^0.2.0",
     "gifencoder": "^2.0.1",
     "gifencoder-forced-color": "^2.1.0",
     "grapheme-splitter": "^1.0.4",
