--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gifencoder-forced-color": "^2.1.0",
     "grapheme-splitter": "^1.0.4",
     "i18n": "^0.13.3",
-    "pathfinding": "^0.4.18"
+    "pathfinding": "^0.4.18",
+    "sudoku-umd": "^1.0.1"
   }
 }
