--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Superalexandre/game-bot.git"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@androz2091/insta.js": "^1.6.1",
+    "@sentry/node": "^6.13.2",
     "canvas": "^2.8.0",
     "discord.js": "^13.0.1",
     "enmap": "^5.8.5",
