--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enmap": "^5.8.7",
     "gifenc": "github:mattdesl/gifenc",
     "i18n": "^0.13.3",
+    "node-fetch": "^3.0.0",
     "sudoku-umd": "^1.0.1"
   }
 }
