--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "i18n": "^0.13.3",
     "node-fetch": "^3.0.0",
     "sudoku-umd": "^1.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.0.0"
   }
 }
