--- a/dashboard/api/package.json
+++ b/dashboard/api/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
-    "passport-discord": "^0.1.4"
+    "passport-discord": "^0.1.4",
+    "url": "^0.11.0"
   }
 }
