--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "sudoku-umd": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.0.1"
+    "autoprefixer": "^10.3.7",
+    "eslint": "^8.0.1",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.17"
   }
 }
