--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@androz2091/insta.js": "^1.6.1",
     "@discordjs/builders": "^0.6.0",
     "@sentry/node": "^6.13.3",
+    "btoa": "^1.2.1",
     "canvas": "^2.8.0",
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.5",
