--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "btoa": "^1.2.1",
     "canvas": "^2.8.0",
     "chalk": "^4.1.2",
+    "chess.js": "^0.12.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "date-fns-tz": "^1.1.6",
