--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build:lang": "localazy upload -k keys.json",
+    "build:lang": "localazy upload -k localazy.keys.json",
     "build:css": "npx tailwindcss -i dashboard/public/styles/tailwind.css -o dashboard/public/styles/styles.css -c dashboard/tailwind.config.cjs",
     "start": "FORCE_COLOR=1 sudo pm2 start index.js --name game --interpreter=/home/pi/.nvm/versions/node/v16.6.1/bin/node"
   },
