--- a/.github/workflows/embed.yml
+++ b/.github/workflows/embed.yml
@@ -1,19 +1,15 @@
 name: embed
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - dev
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # ... other options
           template: classic
           user: Superalexandre
           repo: game-bot
-
-      #- uses: actions/checkout@v2
-      #- uses: actions/setup-node@v2
-      #  with:
-      #    node-version: '14'
-      #- run: npm install -g bats
-      #- run: bats -v
