--- a/.github/workflows/embed.yml
+++ b/.github/workflows/embed.yml
@@ -13,3 +13,4 @@ jobs:
           template: classic
           user: Superalexandre
           repo: game-bot
+          token: ${{ secrets.METRICS_TOKEN }}
