--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sudoku-umd": "^1.0.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
     "autoprefixer": "^10.3.7",
     "eslint": "^8.0.1",
     "postcss": "^8.3.11",
