--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "canvas": "^2.8.0",
     "chalk": "^5.0.0",
     "chess.js": "^0.12.0",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns-tz": "^1.2.2",
