--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build:css": "npx tailwindcss -i dashboard/public/styles/tailwind.css -o dashboard/public/styles/styles.css -c dashboard/tailwind.config.cjs",
-    "start": "FORCE_COLOR=1 sudo pm2 start index.js --name game --interpreter=/home/pi/.nvm/versions/node/v16.13.0/bin/node"
+    "build:css": "npx tailwindcss -i dashboard/public/styles/tailwind.css -o dashboard/public/styles/styles.css -c dashboard/tailwind.config.cjs --minify"
   },
   "repository": {
     "type": "git",
