--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-discord": "^0.1.4",
     "path": "^0.12.7",
     "postcss-cli": "^9.1.0",
+    "socket.io": "^4.5.0",
     "sudoku-umd": "^1.0.1"
   },
   "devDependencies": {
