--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs": "^3.1.6",
     "enmap": "^5.8.7",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.4.0",
     "express-session": "^1.17.2",
     "gifenc": "github:mattdesl/gifenc",
     "i18n": "^0.14.0",
