--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "game-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "All game at every place and easy to use for everyone",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,11 +11,10 @@
     "type": "git",
     "url": "https://github.com/Superalexandre/game-bot.git"
   },
-  "author": "",
+  "author": "Superalexandre",
   "license": "ISC",
   "dependencies": {
     "@androz2091/insta.js": "^1.6.1",
-    "@discordjs/builders": "^0.13.0",
     "btoa": "^1.2.1",
     "canvas": "^2.8.0",
     "chalk": "^5.0.0",
