--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chess.js": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "date-fns-tz": "^1.3.4",
     "discord.js": "^13.7.0",
     "ejs": "^3.1.8",
